# hclog

./: .gitignore  Cargo.toml  README.md
benches/: Cargo.toml  common.rs  criterion_bench.rs  iai_bench.rs
examples/: Cargo.toml  async.rs  derive.rs  enum.rs  log.rs  logfile.rs  simple.rs
hclog/: Cargo.toml
hclog/src/: api.rs  compat.rs  context.rs  error.rs  facades.rs  level.rs  lib.rs  log_internal.rs  logmod.rs  macros.rs  message.rs  options.rs  submodule.rs  task.rs  util.rs
hclog_macros/: Cargo.toml  README.md
hclog_macros/src/: helper.rs  lib.rs
hclog_macros/src/meta/: enum_ty.rs  mod.rs  struct_ty.rs  variant.rs
