[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
hclog = { version = "*", path = "../hclog" }
hclog_macros = { version = "*", path = "../hclog_macros" }
criterion = "0.5.1"
iai-callgrind = "0.14.0"

[[bench]]
name = "criterion_bench"
path = "criterion_bench.rs"
harness = false

[[bench]]
name = "iai_bench"
path = "iai_bench.rs"
harness = false
