[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
futures = { version = "0.3.30", default-features = false, features = ["executor"] }
log = { version = "0.4.22", features = ["std"] }
hclog = { version = "0.1.0", path = "../hclog" }
hclog_macros = { version = "0.1.0", path = "../hclog_macros" }

[[example]]
name = "async"
path = "async.rs"

[[example]]
name = "derive"
path = "derive.rs"

[[example]]
name = "enum"
path = "enum.rs"

[[example]]
name = "log"
path = "log.rs"

[[example]]
name = "simple"
path = "simple.rs"

[[example]]
name = "logfile"
path = "logfile.rs"
