[package]
name = "hclog"
version = "0.1.0"
authors = ["Steffen Bohr <github@sigaction.de>"]
rust-version = "1.74.1"
edition = "2021"
license-file = "../LICENSE"
description = "A high configurable logging library for Rust"
keywords = ["logging", "log", "debug"]
categories = ["development-tools::debugging"]
documentation = "https://docs.rs/hclog"
repository = "https://github.com/ionos-cloud/hclog"
readme = "../README.md"

[package.metadata.docs.rs]
features = ["std", "derive"]

[lib]
name = "hclog"
path = "src/lib.rs"
test = true
doctest = false
crate-type = ["lib"]

[features]
default = [ "std" ]
derive = [ "hclog_macros" ]
std = []

[dependencies]
libc = "0.2.149"
strum = "0.25"
strum_macros = "0.25"
log = { version = "0.4.22", features = ["std"] }
once_cell = "1.17.2"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
pin-project-lite = "0.2.13"
hclog_macros = { path = "../hclog_macros", optional = true, version = "0.1.0" }

[dev-dependencies]
hclog_macros = { path = "../hclog_macros", version = "0.1.0" }
serial_test = "0.5.1"
